--- a/package.json
+++ b/package.json
@@ -6,22 +6,21 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/alpinejs": "^0.1.3",
-    "@astrojs/image": "^0.15.0",
-    "@astrojs/mdx": "^0.17.0",
-    "@astrojs/react": "^3.0.7",
-    "@astrojs/sitemap": "^1.0.1",
-    "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/check": "^0.3.4",
+    "@astrojs/mdx": "^2.0.2",
+    "@astrojs/react": "^3.0.8",
+    "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.4",
     "@fontsource/inter": "^4.5.14",
     "@types/alpinejs": "^3.7.1",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "astro": "^2.0.14",
+    "astro": "^4.0.7",
     "astro-color-scheme": "^1.0.1",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
@@ -31,7 +30,8 @@
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
     "rehype-plugin-image-native-lazy-loading": "^1.2.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
